--- a/.htaccess
+++ b/.htaccess
@@ -1,11 +1,14 @@
-# Enable URL rewriting
 RewriteEngine On
 
-# Remove .html extension
+# Serve .html files without typing .html
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME}\.html -f
-RewriteRule ^([^/]+)$ $1.html [L]
+RewriteRule ^([^/]+)/?$ $1.html [L]
 
-# Redirect .html URLs to clean URL (optional)
+# Optional: redirect .html URLs to clean URL
 RewriteCond %{THE_REQUEST} /([^.]+)\.html
 RewriteRule ^ %1 [R=301,L]
+
+
+
+
